--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.docker.compose.enabled=true
 spring.docker.compose.file=compose.yaml
+logging.level.org.springframework.modulith = INFO
