--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=stonks
+
+stonks.keycloak.address=https://auth.yazin.net/
+stonks.keycloak.realm_name=stonks
+stonks.keycloak.admin_name=yazinx
+stonks.keycloak.admin_pass=yazin_rules
+stonks.keycloak.admin_client=admin-cli
+stonks.keycloak.backend_client=stonks_client
