--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>JAVA_HOME</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
