--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=stonks
-spring.profiles.active=prod
+spring.profiles.active=dev
 stonks.keycloak.address=https://auth.yazin.net/
 stonks.keycloak.realm_name=stonks
 stonks.keycloak.admin_name=yazinx
